--- a/res/values-es/arrays.xml
+++ b/res/values-es/arrays.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <string-array name="sleep_time_labels">
+        <item>5 minutos</item>
+        <item>10 minutos</item>
         <item>15 minutos</item>
         <item>20 minutos</item>
         <item>30 minutos</item>
@@ -17,6 +19,8 @@
         <item>24 horas</item>
     </string-array>
     <string-array name="awake_time_labels">
+        <item>30 segundos</item>
+        <item>1 minuto</item>
         <item>2 minutos</item>
         <item>3 minutos</item>
         <item>4 minutos</item>
