--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="sleep_time_labels">
+        <item>5 minutes</item>
+        <item>10 minutes</item>
         <item>15 minutes</item>
         <item>20 minutes</item>
         <item>30 minutes</item>
@@ -16,6 +18,8 @@
         <item>24 hours</item>
     </string-array>
     <string-array name="awake_time_labels">
+        <item>30 seconds</item>
+        <item>1 minute</item>
         <item>2 minutes</item>
         <item>3 minutes</item>
         <item>4 minutes</item>
